clusters/home/default/zigbee2mqtt/80-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "kokev-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: zigbee2mqtt.kokev.de
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - zigbee2mqtt.kokev.de
      secretName: zigbee2mqtt-tls
